[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/MainScene.gd" type="Script" id=1]
[ext_resource path="res://Scripts/B_infantry_popup.gd" type="Script" id=3]
[ext_resource path="res://Scripts/InfantryPopup.gd" type="Script" id=4]
[ext_resource path="res://Scripts/InfantryPanel.gd" type="Script" id=5]
[ext_resource path="res://Scripts/RangedPanel.gd" type="Script" id=6]
[ext_resource path="res://Scripts/MountedPanel.gd" type="Script" id=7]
[ext_resource path="res://Scripts/SiegePanel.gd" type="Script" id=8]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=9]

[sub_resource type="Theme" id=1]
PopupMenu/icons/ = null

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="GUI" parent="." instance=ExtResource( 9 )]

[node name="TroopBox" type="VBoxContainer" parent="."]
margin_left = 5.04358
margin_top = 132.3
margin_right = 247.044
margin_bottom = 594.3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfantryPanel" type="Panel" parent="TroopBox"]
margin_top = 50.0
margin_right = 242.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_troop_type" type="Label" parent="TroopBox/InfantryPanel"]
margin_left = 4.24265
margin_top = 1.41422
margin_right = 80.2426
margin_bottom = 15.4142
text = "[Troop type]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_troop_name" type="Label" parent="TroopBox/InfantryPanel"]
margin_left = 4.24265
margin_top = 17.6777
margin_right = 90.2426
margin_bottom = 31.6777
text = "[Troop Name]"

[node name="L_troop_count" type="Label" parent="TroopBox/InfantryPanel"]
margin_left = 4.94977
margin_top = 36.0625
margin_right = 89.9498
margin_bottom = 50.0625
text = "[Troop Count]"

[node name="B_add_troop" type="Button" parent="TroopBox/InfantryPanel"]
margin_left = 204.261
margin_top = 70.4074
margin_right = 228.261
margin_bottom = 90.4074
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_info" type="Button" parent="TroopBox/InfantryPanel"]
margin_left = 174.295
margin_top = 70.4074
margin_right = 198.295
margin_bottom = 90.4074
text = "i"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_troop_popup" type="Button" parent="TroopBox/InfantryPanel"]
margin_left = 181.127
margin_top = 7.44434
margin_right = 234.127
margin_bottom = 27.4443
text = "troops"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="troop_popup" type="PopupMenu" parent="TroopBox/InfantryPanel/B_troop_popup"]
margin_left = -56.362
margin_top = -71.9864
margin_right = 114.638
margin_bottom = -8.98643
theme = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RangedPanel" type="Panel" parent="TroopBox"]
margin_top = 154.0
margin_right = 242.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_troop_type" type="Label" parent="TroopBox/RangedPanel"]
margin_left = 4.24265
margin_top = 1.41422
margin_right = 80.2426
margin_bottom = 15.4142
text = "[Troop type]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_troop_name" type="Label" parent="TroopBox/RangedPanel"]
margin_left = 4.24265
margin_top = 17.6777
margin_right = 90.2426
margin_bottom = 31.6777
text = "[Troop Name]"

[node name="L_troop_count" type="Label" parent="TroopBox/RangedPanel"]
margin_left = 4.94977
margin_top = 36.0625
margin_right = 89.9498
margin_bottom = 50.0625
text = "[Troop Count]"

[node name="B_add_troop" type="Button" parent="TroopBox/RangedPanel"]
margin_left = 168.287
margin_top = 66.5331
margin_right = 192.287
margin_bottom = 86.5331
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MountedPanel" type="Panel" parent="TroopBox"]
margin_top = 258.0
margin_right = 242.0
margin_bottom = 358.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_troop_type" type="Label" parent="TroopBox/MountedPanel"]
margin_left = 4.24265
margin_top = 1.41422
margin_right = 80.2426
margin_bottom = 15.4142
text = "[Troop type]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_troop_name" type="Label" parent="TroopBox/MountedPanel"]
margin_left = 4.24265
margin_top = 17.6777
margin_right = 90.2426
margin_bottom = 31.6777
text = "[Troop Name]"

[node name="L_troop_count" type="Label" parent="TroopBox/MountedPanel"]
margin_left = 4.94977
margin_top = 36.0625
margin_right = 89.9498
margin_bottom = 50.0625
text = "[Troop Count]"

[node name="B_add_troop" type="Button" parent="TroopBox/MountedPanel"]
margin_left = 164.556
margin_top = 64.4142
margin_right = 188.556
margin_bottom = 84.4142
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SiegePanel" type="Panel" parent="TroopBox"]
margin_top = 362.0
margin_right = 242.0
margin_bottom = 462.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_troop_type" type="Label" parent="TroopBox/SiegePanel"]
margin_left = 4.24265
margin_top = 1.41422
margin_right = 80.2426
margin_bottom = 15.4142
text = "[Troop type]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_troop_name" type="Label" parent="TroopBox/SiegePanel"]
margin_left = 4.24265
margin_top = 17.6777
margin_right = 90.2426
margin_bottom = 31.6777
text = "[Troop Name]"

[node name="L_troop_count" type="Label" parent="TroopBox/SiegePanel"]
margin_left = 4.94977
margin_top = 36.0625
margin_right = 89.9498
margin_bottom = 50.0625
text = "[Troop Count]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_add_troop" type="Button" parent="TroopBox/SiegePanel"]
margin_left = 164.556
margin_top = 64.4142
margin_right = 188.556
margin_bottom = 84.4142
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TroopBox/InfantryPanel/B_add_troop" to="TroopBox/InfantryPanel" method="_on_B_add_troop_pressed"]
[connection signal="id_pressed" from="TroopBox/InfantryPanel/B_troop_popup/troop_popup" to="TroopBox/InfantryPanel" method="_on_troop_popup_id_pressed"]
[connection signal="pressed" from="TroopBox/RangedPanel/B_add_troop" to="TroopBox/RangedPanel" method="_on_B_add_troop_pressed"]
[connection signal="pressed" from="TroopBox/MountedPanel/B_add_troop" to="TroopBox/MountedPanel" method="_on_B_add_troop_pressed"]
[connection signal="pressed" from="TroopBox/SiegePanel/B_add_troop" to="TroopBox/SiegePanel" method="_on_B_add_troop_pressed"]
